@@ -1,3 +1,7 @@
+Mon Sep 15 15:17:32 2003  George Lebl <jirka@5z.com>
+
+	* geyes.c: when started in lockdown mode, hide the preferences item
+
 2003-08-23  Irene Ryan <irene.ryan@sun.com>
 
 	* docs/C/geyes.xml, geyes-C.omf, l10n.txt: Minor updates for
